<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">little prince\'s beauty</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text1">静</string>
    <string name="text2">芬</string>
    <string name="text3">今</string>
    <string name="text4">夜</string>
    <string name="text5">我</string>
    <string name="text6">不</string>
    <string name="text7">关</string>
    <string name="text8">心</string>
    <string name="text9">人</string>
    <string name="text10">类</string>
    <string name="text11">我</string>
    <string name="text12">只</string>
    <string name="text13">想</string>
    <string name="text14">你</string>
    <string name="text15">情</string>
    
    <string name="delete">删除该内容</string>
    <string name="send">分享给波哥</string>

    <!-- note -->
    <string name="menu_font_small">Small</string>
    <string name="menu_font_normal">Medium</string>
    <string name="menu_font_large">Large</string>
    <string name="menu_font_super">Super</string>
    <string name="note_link_tel">Call</string>
    <string name="note_link_email">Send email</string>
    <string name="note_link_web">Browse web</string>
    <string name="note_link_other">Open map</string>
    <string name="note_alert_expired">Expired</string>
    <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
    <string name="info_note_enter_desktop">Note added to home</string>
    <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
    <string name="error_note_not_exist">The note is not exist</string>
    
    <string name="menu_delete">Delete</string>
    <string name="menu_send">Send Message</string>
    
    <string name="prize_note">刮刮看\n有可能让嘉嘉为你做牛做马哟\n一天有三次机会\n刮到就得做到～</string>
    <string name="title">规则</string>
    <string name="today_prize">今天的大奖：</string>
    
    <string name="music_title">显示歌名</string>

</resources>