<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_gradient"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/logo">
    </ImageView>
    <!--
         android:scaleType是控制图片如何resized/moved来匹对ImageView的size CENTER_INSIDE 
		/ centerInside 将图片的内容完整居中显示，通过按比例缩小或原来的size使得图片长/宽等于或小于View的长/宽
    -->

    <ImageView
        android:id="@+id/head"
        android:layout_width="68dp"
        android:layout_height="80dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="53dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/text1"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:padding="20dp"
        android:text="@string/text1" />

    <TextView
        android:id="@+id/text2"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:text="@string/text2" />

    <TextView
        android:id="@+id/text3"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="20dp"
        android:text="@string/text3" />

    <TextView
        android:id="@+id/text4"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="40dp"
        android:text="@string/text4" />

    <TextView
        android:id="@+id/text5"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="60dp"
        android:text="@string/text5" />

    <TextView
        android:id="@+id/text6"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="80dp"
        android:text="@string/text6" />

    <TextView
        android:id="@+id/text7"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="100dp"
        android:text="@string/text7" />

    <TextView
        android:id="@+id/text8"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="120dp"
        android:text="@string/text8" />

    <TextView
        android:id="@+id/text9"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="140dp"
        android:text="@string/text9" />

    <TextView
        android:id="@+id/text10"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="42dp"
        android:paddingTop="160dp"
        android:text="@string/text10" />

    <TextView
        android:id="@+id/text11"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="64dp"
        android:paddingTop="20dp"
        android:text="@string/text11" />

    <TextView
        android:id="@+id/text12"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="64dp"
        android:paddingTop="40dp"
        android:text="@string/text12" />

    <TextView
        android:id="@+id/text13"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="64dp"
        android:paddingTop="60dp"
        android:text="@string/text13" />

    <TextView
        android:id="@+id/text14"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/logo"
        android:layout_alignTop="@id/logo"
        android:gravity="top"
        android:paddingLeft="64dp"
        android:paddingTop="80dp"
        android:text="@string/text14" />

</RelativeLayout>