<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/prize_background"
    android:orientation="vertical" >

    <!--
	 必须设置
	 android:layout_width
	 android:layout_height 
	 的值为常量
    -->

    <RelativeLayout
        android:id="@+id/prize_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/prize_to1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prize_to2"
            android:layout_alignParentTop="true"
            android:layout_marginTop="45dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearanceMedium" />

        <TextView
            android:id="@+id/prize_to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prize_to1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/prize_note"
            android:textAppearance="@style/TextAppearanceNormal" />
    </RelativeLayout>

    <com.asd.littleprincesbeauty.ui.Text_Rubbler
        android:id="@+id/rubbler"
        android:layout_width="250dip"
        android:layout_height="90dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearancePrimaryItem" />

    <RelativeLayout
        android:id="@+id/prize_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/rubbler"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/today_prize"
            android:textAppearance="@style/TextAppearanceNormal" />

        <TextView
            android:id="@+id/prize_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prize"
            android:paddingLeft="50dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:text=""
            android:textAppearance="@style/TextAppearanceNormal" />

        <TextView
            android:id="@+id/prize_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prize_01"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:text=""
            android:textAppearance="@style/TextAppearanceNormal" />

        <TextView
            android:id="@+id/prize_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prize_02"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:text=""
            android:textAppearance="@style/TextAppearanceNormal" />
    </RelativeLayout>

</RelativeLayout>